WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273519
REGRESSION (
277837@main
): [UnifiedPDF] PDF content scales oddly, and selection detaches, when resizing in "Automatically Resize" mode
https://bugs.webkit.org/show_bug.cgi?id=273519
Summary
REGRESSION (277837@main): [UnifiedPDF] PDF content scales oddly, and selectio...
Simon Fraser (smfr)
Reported
2024-04-30 13:29:01 PDT
When the “Automatically Resize” context menu option is enabled, resizing the window temporarily detaches any selection highlights from the rest of the page. This almost certainly regressed in
277837@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-04-30 13:29:21 PDT
<
rdar://127314933
>
Simon Fraser (smfr)
Comment 2
2024-04-30 13:32:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27949
EWS
Comment 3
2024-04-30 15:31:14 PDT
Committed
278188@main
(7ef93c1bf37e): <
https://commits.webkit.org/278188@main
> Reviewed commits have been landed. Closing PR #27949 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug