REGRESSION (277837@main): [UnifiedPDF] PDF content scales oddly, and selection detaches, when resizing in "Automatically Resize" mode https://bugs.webkit.org/show_bug.cgi?id=273519 rdar://127314933

Reviewed by Abrar Rahman Protyasha.

After 277837@main we allow rendered tiles with invalid geometry to remain in the cache, which means that we can paint them,
e.g. on auto resizing, even though their geometry is wrong. So remove them from the cache of rendered tiles when we know
their contents are wrong.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm:
(WebKit::AsyncPDFRenderer::willRepaintTile):

Canonical link: https://commits.webkit.org/278188@main